--- a/defaults.cfg
+++ b/defaults.cfg
@@ -4,6 +4,10 @@ iv_file = iv.txt
 
 [server]
 db_name = server.db
+debug = True
+secret_key = 'development key'
+username = 'admin'
+password = 'default'
 backend = amqp://
 broker = amqp://
 
