--- a/defaults.cfg
+++ b/defaults.cfg
@@ -5,9 +5,9 @@ iv_file = iv.txt
 [server]
 db_name = server.db
 debug = True
-secret_key = 'development key'
-username = 'admin'
-password = 'default'
+secret_key = development key
+username = admin
+password = default
 backend = amqp://
 broker = amqp://
 
